@@ -236,8 +236,7 @@ sub new {
     local $Error::Depth = $Error::Depth + 1;
 
     @args = ( -file => $1, -line => $2)
-	if($text =~ s/ at (\S+) line (\d+)(\.\n)?$//s);
-
+	if($text =~ s/\s+at\s+(\S+)\s+line\s+(\d+)(?:,\s*<[^>]*>\s+line\s+\d+)?\.?\n?$//s);
     push(@args, '-value', 0 + $value)
 	if defined($value);
 
