@@ -1,0 +1,19 @@
+package MyDie;
+
+sub mydie
+{
+    local *I;
+    open I, "<", "ChangeLog";
+    my $s = <I>;
+
+
+
+
+
+
+
+
+    die "Hello";
+}
+
+1;
